@@ -5,7 +5,6 @@
     border: 1px solid gray;
 	background-color: #18188D;
 	font-size: 70%;
-	font-weight: bold;
 }
 
 #viewPostLeftColumn.admin {
