@@ -6,6 +6,7 @@
 	- added a "reply to thread" link at the bottom of a thread to automatically populate the "thread id" field on the reply form
 		- TODO: disable this box and go solely with this method?
 	- added FAQ
+	- staff now have a "Forum Mod" title under their name when posting
 
 # December 26, 2012
 	- board name, admin panel button, and version info (if enabled) are now located in a static bar at the top of the screen
